[FIX] form view repair [still] delete sale.order, task and repair

--- a/car-workshop/views/inherit_project_project.xml
+++ b/car-workshop/views/inherit_project_project.xml
@@ -99,7 +99,7 @@
                                     <a class="o_project_kanban_box" name="%(action_car_project_kanban_to_repair_kanban)d" type="action">
                                         <div>
                                             <span class="o_value"><t t-esc="record.task_count.value"/></span>
-                                            <span class="o_label"><t t-esc="record.label_tasks.value"/></span>
+                                            <span class="o_label">Repairs</span>
                                             <a t-if="record.task_needaction_count.raw_value" class="o_needaction" name="134" type="action" context="{'search_default_message_needaction': 1}">
                                                 <t t-esc="record.task_needaction_count.raw_value"/>
                                             </a>
