--- a/car-workshop/views/car-workshop_repair.xml
+++ b/car-workshop/views/car-workshop_repair.xml
@@ -50,40 +50,40 @@
                         </div>
                         <group>
                             <group>
+                                <field name="vehicle_id"/>
                                 <field name="partner_id" domain="[('customer','=',True)]"
                                        context="{'search_default_customer':1, 'show_address': 1}"
                                        options="{&quot;always_reload&quot;: True}"/>
+
                                 <field name="partner_invoice_id"
                                        context="{'default_type':'invoice'}"
-                                       options="{&quot;always_reload&quot;: True}"/>
-                                <!--groups="sale.group_delivery_invoice_address"-->
+                                       options="{&quot;always_reload&quot;: True}" attrs="{'invisible':1}"/>
 
-                                <!--<field name="partner_shipping_id" groups="sale.group_delivery_invoice_address"-->
-                                <!--context="{'default_type':'delivery'}"-->
-                                <!--options="{&quot;always_reload&quot;: True}"/>-->
-                                <!--<field name="project_task_id"/>-->
                                 <field name="project_id"/>
-                                <field name="stage_id"/>
+                                <field name="stage_id" attrs="{'invisible':1}"/>
+                                <field name="kanban_state" attrs="{'invisible':1}"/>
                                 <field name="user_id"/>
-                                <field name="kanban_state"/>
-                                <field name="date_start"/>
-                                <field name="date_deadline"/>
-                                <field name="vehicle_id"/>
-                                <field name="tag_ids" widget="many2many_tags"
-                                       options="{'color_field': 'color', 'no_create_edit': True}"/>
+
                             </group>
                             <group>
                                 <field name="validity_date" attrs="{'invisible': [('state', 'in', ['sale', 'done'])]}"/>
+                                <field name="date_start"/>
+                                <field name="date_deadline"/>
                                 <field name="confirmation_date"
                                        attrs="{'invisible': [('state', 'in', ['draft', 'sent', 'cancel'])]}"/>
 
-                                <field name="pricelist_id"/>
-                                <!--groups="product.group_sale_pricelist"-->
-                                <!--<field name="currency_id" invisible="1"/>-->
+                                <field name="pricelist_id" attrs="{'invisible':1}"/>
+
                                 <field name="payment_term_id" options="{'no_create': True}"/>
+                                <field name="tag_ids" widget="many2many_tags"
+                                       options="{'color_field': 'color', 'no_create_edit': True}"/>
                             </group>
                         </group>
                         <notebook>
+                            <page name="description_page" string="Description">
+                                <field name="description" type="html"/>
+                                <div class="oe_clear"/>
+                            </page>
                             <page string="Order Lines">
                                 <field name="order_line" mode="tree,kanban"
                                        attrs="{'readonly': [('state', 'in', ('done','cancel'))]}">
@@ -325,10 +325,12 @@
             <field name="name">car-workshop.repair.kanban</field>
             <field name="model">car_workshop.repair</field>
             <field name="arch" type="xml">
-                <kanban default_group_by="stage_id" class="o_kanban_small_column o_kanban_project_tasks" quick_create="false">
+                <kanban default_group_by="stage_id" class="o_kanban_small_column o_kanban_project_tasks"
+                        quick_create="false">
                     <field name="color"/>
                     <!--<field name="priority"/>-->
-                    <field name="stage_id" options="{&quot;group_by_tooltip&quot;: {&quot;description&quot;: &quot;Stage Description&quot;, &quot;legend_priority&quot;: &quot;Use of stars&quot;}}"/>
+                    <field name="stage_id"
+                           options="{&quot;group_by_tooltip&quot;: {&quot;description&quot;: &quot;Stage Description&quot;, &quot;legend_priority&quot;: &quot;Use of stars&quot;}}"/>
 
                     <field name="user_id"/>
                     <!--<field name="user_email"/>-->
@@ -347,63 +349,84 @@
                     <field name="image_client_vehicle"/>
                     <field name="activity_ids"/>
                     <field name="activity_state"/>
-                    <progressbar field="kanban_state" colors="{&quot;done&quot;: &quot;success&quot;, &quot;blocked&quot;: &quot;danger&quot;}"/>
+                    <progressbar field="kanban_state"
+                                 colors="{&quot;done&quot;: &quot;success&quot;, &quot;blocked&quot;: &quot;danger&quot;}"/>
                     <templates>
-                    <t t-name="kanban-box">
-                        <div t-attf-class="oe_kanban_color_#{kanban_getcolor(record.color.raw_value)} oe_kanban_card oe_kanban_global_click">
-                            <div class="oe_kanban_content">
-                                <div class="o_kanban_record_top">
-                                    <div class="o_kanban_record_headings">
-                                        <strong class="o_kanban_record_title"><field name="name"/></strong><br/>
-                                        <small class="o_kanban_record_subtitle text-muted">
-                                            <field name="project_id" invisible="context.get('default_project_id', False)"/>
-                                            <t t-if="record.date_deadline.raw_value and record.date_deadline.raw_value lt (new Date())" t-set="red">oe_kanban_text_red</t>
-                                            <span t-attf-class="#{red || ''}"><i><field name="date_deadline"/></i></span>
-                                            <!--<t t-if="record.email_from.raw_value"><span><field name="email_from"/></span></t>-->
-                                        </small>
+                        <t t-name="kanban-box">
+                            <div t-attf-class="oe_kanban_color_#{kanban_getcolor(record.color.raw_value)} oe_kanban_card oe_kanban_global_click">
+                                <div class="oe_kanban_content">
+                                    <div class="o_kanban_record_top">
+                                        <div class="o_kanban_record_headings">
+                                            <strong class="o_kanban_record_title">
+                                                <field name="name"/>
+                                            </strong>
+                                            <br/>
+                                            <small class="o_kanban_record_subtitle text-muted">
+                                                <field name="project_id"
+                                                       invisible="context.get('default_project_id', False)"/>
+                                                <t t-if="record.date_deadline.raw_value and record.date_deadline.raw_value lt (new Date())"
+                                                   t-set="red">oe_kanban_text_red
+                                                </t>
+                                                <span t-attf-class="#{red || ''}">
+                                                    <i>
+                                                        <field name="date_deadline"/>
+                                                    </i>
+                                                </span>
+                                                <!--<t t-if="record.email_from.raw_value"><span><field name="email_from"/></span></t>-->
+                                            </small>
+                                        </div>
+                                        <div class="o_dropdown_kanban dropdown" groups="base.group_user">
+                                            <a class="dropdown-toggle btn" data-toggle="dropdown" href="#">
+                                                <span class="fa fa-ellipsis-v" aria-hidden="true"/>
+                                            </a>
+                                            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                                                <li t-if="widget.editable">
+                                                    <a type="set_cover">Set Cover Image</a>
+                                                </li>
+                                                <li t-if="widget.editable">
+                                                    <a type="edit">Edit Task</a>
+                                                </li>
+                                                <li t-if="widget.deletable">
+                                                    <a type="delete">Delete</a>
+                                                </li>
+                                                <li class="divider"/>
+                                                <li class="dropdown-header">Record's Colour</li>
+                                                <li>
+                                                    <ul class="oe_kanban_colorpicker" data-field="color"/>
+                                                </li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                    <div class="o_dropdown_kanban dropdown" groups="base.group_user">
-                                        <a class="dropdown-toggle btn" data-toggle="dropdown" href="#">
-                                            <span class="fa fa-ellipsis-v" aria-hidden="true"/>
-                                        </a>
-                                        <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                                            <li t-if="widget.editable"><a type="set_cover">Set Cover Image</a></li>
-                                            <li t-if="widget.editable"><a type="edit">Edit Task</a></li>
-                                            <li t-if="widget.deletable"><a type="delete">Delete</a></li>
-                                            <li class="divider"/>
-                                            <li class="dropdown-header">Record's Colour</li>
-                                            <li>
-                                                <ul class="oe_kanban_colorpicker" data-field="color"/>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="o_kanban_record_body">
-                                    <div class="o_kanban_image">
-                                        <img t-att-src="kanban_image('fleet.vehicle', 'image_client_vehicle', record.vehicle_id.raw_value)"/>
-                                    </div>
-                                    <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
-                                    <!--<div t-if="record.displayed_image_id.value">-->
+                                    <div class="o_kanban_record_body">
+                                        <div class="o_kanban_image">
+                                            <img t-att-src="kanban_image('fleet.vehicle', 'image_client_vehicle', record.vehicle_id.raw_value)"/>
+                                        </div>
+                                        <field name="tag_ids" widget="many2many_tags"
+                                               options="{'color_field': 'color'}"/>
+                                        <!--<div t-if="record.displayed_image_id.value">-->
                                         <!--<field name="displayed_image_id" widget="attachment_image"/>-->
-                                    <!--</div>-->
-                                </div>
-                                <div class="o_kanban_record_bottom">
-                                    <div class="oe_kanban_bottom_left">
-                                        <!--<field name="priority" widget="priority"/>-->
-                                        <!--<field name="activity_ids" widget="kanban_activity"/>-->
-                                        <!--<t t-if="record.message_needaction_counter.raw_value">-->
+                                        <!--</div>-->
+                                    </div>
+                                    <div class="o_kanban_record_bottom">
+                                        <div class="oe_kanban_bottom_left">
+                                            <!--<field name="priority" widget="priority"/>-->
+                                            <!--<field name="activity_ids" widget="kanban_activity"/>-->
+                                            <!--<t t-if="record.message_needaction_counter.raw_value">-->
                                             <!--<span class="oe_kanban_mail_new" title="Unread Messages"><i class="fa fa-comments"/><t t-raw="record.message_needaction_counter.raw_value"/></span>-->
-                                        <!--</t>-->
-                                    </div>
-                                    <div class="oe_kanban_bottom_right">
-                                        <field name="kanban_state" widget="state_selection" groups="base.group_user"/>
-                                        <img t-att-src="kanban_image('res.users', 'image_small', record.user_id.raw_value)" t-att-title="record.user_id.value" width="24" height="24" class="oe_kanban_avatar"/>
+                                            <!--</t>-->
+                                        </div>
+                                        <div class="oe_kanban_bottom_right">
+                                            <field name="kanban_state" widget="state_selection"
+                                                   groups="base.group_user"/>
+                                            <img t-att-src="kanban_image('res.users', 'image_small', record.user_id.raw_value)"
+                                                 t-att-title="record.user_id.value" width="24" height="24"
+                                                 class="oe_kanban_avatar"/>
+                                        </div>
                                     </div>
                                 </div>
+                                <div class="oe_clear"/>
                             </div>
-                            <div class="oe_clear"/>
-                        </div>
-                    </t>
+                        </t>
                     </templates>
                 </kanban>
             </field>
