[FIX] repair count in Areas kanban

--- a/car-workshop/views/inherit_project_project.xml
+++ b/car-workshop/views/inherit_project_project.xml
@@ -55,7 +55,7 @@
                     <field name="name"/>
                     <field name="partner_id"/>
                     <field name="color"/>
-                    <field name="task_count"/>
+                    <field name="repair_count"/>
                     <field name="task_needaction_count"/>
                     <field name="label_tasks"/>
                     <field name="alias_id"/>
@@ -98,7 +98,7 @@
                                 <div class="o_project_kanban_boxes">
                                     <a class="o_project_kanban_box" name="%(action_car_project_kanban_to_repair_kanban)d" type="action">
                                         <div>
-                                            <span class="o_value"><t t-esc="record.task_count.value"/></span>
+                                            <span class="o_value"><t t-esc="record.repair_count.value"/></span>
                                             <span class="o_label">Repairs</span>
                                             <a t-if="record.task_needaction_count.raw_value" class="o_needaction" name="134" type="action" context="{'search_default_message_needaction': 1}">
                                                 <t t-esc="record.task_needaction_count.raw_value"/>
