--- a/car-workshop/views/inherit_project_project.xml
+++ b/car-workshop/views/inherit_project_project.xml
@@ -44,6 +44,7 @@
                 'search_default_project_id': [active_id],
                 'default_project_id': active_id,
             }</field>
+             <field name="search_view_id" ref="project.view_task_search_form"/>
         </record>
 
         <!--Project Project Kanban View-->
