--- a/car-workshop/views/car-workshop_repair.xml
+++ b/car-workshop/views/car-workshop_repair.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
+
+        <!--<record id="car_workshop_action_view_sale_advance_payment_inv" model="ir.actions.act_window">-->
+            <!--<field name="name">Invoice Order 2</field>-->
+            <!--<field name="type">ir.actions.act_window</field>-->
+            <!--<field name="res_model">sale.advance.payment.inv</field>-->
+            <!--<field name="view_type">form</field>-->
+            <!--<field name="view_mode">form</field>-->
+            <!--<field name="target">new</field>-->
+            <!--&lt;!&ndash;<field name="groups_id" eval="[(4,ref('sales_team.group_sale_salesman'))]"/>&ndash;&gt;-->
+            <!--&lt;!&ndash; TODO: check if we need this &ndash;&gt;-->
+            <!--&lt;!&ndash;<field name="binding_model_id" ref="sale.model_sale_order" />&ndash;&gt;-->
+        <!--</record>-->
+
         <!-- Project Repair Form View -->
         <record id="car-workshop_repair_view_form" model="ir.ui.view">
             <field name="name">car-workshop.repair.form</field>
@@ -8,6 +21,14 @@
             <field name="arch" type="xml">
                 <form string="Sales Order" class="o_sale_order">
                     <header>
+                        <button name="pruebas_pruebas" string="Create Invoice"
+                                type="object" class="btn-primary"
+                                attrs="{'invisible': [('invoice_status', '!=', 'to invoice')]}"/>
+                        <button name="%(sale.action_view_sale_advance_payment_inv)d" string="Create Invoice2"
+                                type="action" context="{'default_advance_payment_method': 'percentage'}"
+                                attrs="{'invisible': ['|',('invoice_status', '!=', 'no'), ('state', '!=', 'sale')]}"/>
+
+
                         <button name="action_quotation_send" string="Send by Email" type="object" states="draft"
                                 class="btn-primary"/>
                         <button name="action_quotation_send" type="object" string="Send PRO-FORMA Invoice"
@@ -42,11 +63,16 @@
                                 <field name="invoice_count" widget="statinfo" string="Invoices"/>
                             </button>
                         </div>
+                        <field name="kanban_state" widget="state_selection"/><br/>
                         <field name="image_client_vehicle" widget="image" class="oe_avatar"/>
                         <div class="oe_title">
-                            <h1>
-                                <field name="name" readonly="1"/>
+                            <h1 class="o_row">
+
+                                <field name="priority" widget="priority"/>
+                                <field name="name"/>
+                                <field name="repair_title" attrs="{'invisible':[('repair_title','=',False)]}"/>
                             </h1>
+
                         </div>
                         <group>
                             <group>
@@ -61,7 +87,6 @@
 
                                 <field name="project_id"/>
                                 <field name="stage_id" attrs="{'invisible':1}"/>
-                                <field name="kanban_state" attrs="{'invisible':1}"/>
                                 <field name="user_id"/>
 
                             </group>
@@ -349,6 +374,8 @@
                     <field name="image_client_vehicle"/>
                     <field name="activity_ids"/>
                     <field name="activity_state"/>
+                    <field name="vehicle_id"/>
+                    <field name="partner_id"/>
                     <progressbar field="kanban_state"
                                  colors="{&quot;done&quot;: &quot;success&quot;, &quot;blocked&quot;: &quot;danger&quot;}"/>
                     <templates>
@@ -358,6 +385,10 @@
                                     <div class="o_kanban_record_top">
                                         <div class="o_kanban_record_headings">
                                             <strong class="o_kanban_record_title">
+                                                <field name="partner_id"/>
+                                                <br/>
+                                                <field name="vehicle_id"/>
+                                                <br/>
                                                 <field name="name"/>
                                             </strong>
                                             <br/>
@@ -406,13 +437,13 @@
                                     </div>
                                     <div class="o_kanban_record_bottom">
                                         <div class="oe_kanban_bottom_left">
-                                            <!--<field name="priority" widget="priority"/>-->
-                                            <!--<field name="activity_ids" widget="kanban_activity"/>-->
                                             <!--<t t-if="record.message_needaction_counter.raw_value">-->
                                             <!--<span class="oe_kanban_mail_new" title="Unread Messages"><i class="fa fa-comments"/><t t-raw="record.message_needaction_counter.raw_value"/></span>-->
                                             <!--</t>-->
                                         </div>
                                         <div class="oe_kanban_bottom_right">
+                                            <field name="priority" widget="priority"/>
+                                            <field name="activity_ids" widget="kanban_activity"/>
                                             <field name="kanban_state" widget="state_selection"
                                                    groups="base.group_user"/>
                                             <img t-att-src="kanban_image('res.users', 'image_small', record.user_id.raw_value)"
