--- a/car-workshop/views/car-workshop_repair.xml
+++ b/car-workshop/views/car-workshop_repair.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-
         <!--<record id="car_workshop_action_view_sale_advance_payment_inv" model="ir.actions.act_window">-->
             <!--<field name="name">Invoice Order 2</field>-->
             <!--<field name="type">ir.actions.act_window</field>-->
@@ -21,8 +20,8 @@
             <field name="arch" type="xml">
                 <form string="Sales Order" class="o_sale_order">
                     <header>
-                        <button name="%(sale.action_view_sale_advance_payment_inv)d" string="Create Invoice"
-                                type="action" class="btn-primary"
+                        <button name="action_invoice_create" string="Create Invoice"
+                                type="object" class="btn-primary"
                                 attrs="{'invisible': [('invoice_status', '!=', 'to invoice')]}"/>
                         <button name="%(sale.action_view_sale_advance_payment_inv)d" string="Create Invoice2"
                                 type="action" context="{'default_advance_payment_method': 'percentage'}"
@@ -54,7 +53,8 @@
                                 help="If the sale is locked, you can not modify it anymore. However, you will still be able to invoice or deliver."/>
                         <button name="action_unlock" type="object" string="Unlock" states="done"
                                 groups="sales_team.group_sale_manager"/>
-                        <field name="state" attrs="{'invisible':1}" widget="statusbar" statusbar_visible="draft,sent,sale"/>
+                        <field name="state" attrs="{'invisible':1}" widget="statusbar"
+                               statusbar_visible="draft,sent,sale"/>
                         <field name="stage_id" widget="statusbar" clickable="True" options="{'fold_field': 'fold'}"/>
                     </header>
                     <sheet>
@@ -64,14 +64,15 @@
                                 <field name="invoice_count" widget="statinfo" string="Invoices"/>
                             </button>
                         </div>
-                        <field name="kanban_state" widget="state_selection"/><br/>
+                        <field name="kanban_state" widget="state_selection"/>
+                        <br/>
                         <field name="image_client_vehicle" widget="image" class="oe_avatar"/>
                         <div class="oe_title">
                             <h1 class="o_row">
 
                                 <field name="priority" widget="priority"/>
                                 <field name="repair_title" attrs="{'invisible':[('repair_title','=',False)]}"/>
-                                <field name="name"/>
+                                <field name="name" attrs="{'invisible':[('repair_title','!=',False)]}"/>
 
                             </h1>
 
@@ -87,6 +88,10 @@
                                        context="{'default_type':'invoice'}"
                                        options="{&quot;always_reload&quot;: True}" attrs="{'invisible':1}"/>
 
+                                <field name="partner_shipping_id"
+                                       context="{'default_type':'delivery'}" options='{"always_reload": True}'
+                                       attrs="{'invisible':1}"/>
+
                                 <field name="project_id"/>
 
                                 <field name="user_id"/>
@@ -94,14 +99,17 @@
                             </group>
                             <group>
                                 <field name="validity_date" attrs="{'invisible': [('state', 'in', ['sale', 'done'])]}"/>
-                                <field name="date_start"/>
-                                <field name="date_deadline"/>
                                 <field name="confirmation_date"
                                        attrs="{'invisible': [('state', 'in', ['draft', 'sent', 'cancel'])]}"/>
-
-                                <field name="pricelist_id" attrs="{'invisible':1}"/>
-
+                                <field name="pricelist_id" attrs="{'invisible':0}"/>
+                                <!--<field name="currency_id" invisible="1"/>-->
                                 <field name="payment_term_id" options="{'no_create': True}"/>
+                                <field name="state"/>
+                                <field name="name"/>
+                            </group>
+                            <group>
+                                <field name="date_start"/>
+                                <field name="date_deadline"/>
                                 <field name="tag_ids" widget="many2many_tags"
                                        options="{'color_field': 'color', 'no_create_edit': True}"/>
                             </group>
@@ -112,7 +120,8 @@
                                 <div class="oe_clear"/>
                             </page>
                             <page string="Order Lines">
-                                <field name="order_line" mode="tree,kanban"
+                                <!--PRUEBAs car_order_line-->
+                                <field name="car_order_line" mode="tree,kanban"
                                        attrs="{'readonly': [('state', 'in', ('done','cancel'))]}">
                                     <form string="Sales Order Lines">
                                         <group>
@@ -151,7 +160,7 @@
                                                 <label for="discount" groups="sale.group_discount_per_so_line"/>
                                                 <div name="discount" groups="sale.group_discount_per_so_line">
                                                     <field name="discount" class="oe_inline"/>
-                                                    %%
+                                                    %
                                                 </div>
                                             </group>
                                             <group>
@@ -186,7 +195,7 @@
                                         <field name="sequence" widget="handle"/>
                                         <field name="product_updatable" invisible="1"/>
                                         <field name="product_id"
-                                               attrs="{'readonly': [('product_updatable', '=', False)]}"
+                                               attrs="{'readonly': [('product_updatable', '=', False)]}" force_save="1"
                                                context="{'partner_id':parent.partner_id, 'quantity':product_uom_qty, 'pricelist':parent.pricelist_id, 'uom':product_uom, 'company_id': parent.company_id}"/>
                                         <field name="layout_category_id" groups="sale.group_sale_layout"/>
                                         <field name="name"/>
@@ -345,7 +354,6 @@
                 </form>
             </field>
         </record>
-
 
 
         <!--Car-Workshop Repair Kanban View -->
