--- a/car-workshop/views/repair.xml
+++ b/car-workshop/views/repair.xml
@@ -421,20 +421,20 @@
                                 </div>
                                 <div class="oe_kanban_details">
                                     <strong class="o_kanban_record_title">
+                                        <field name="repair_title"/>
                                         <field name="partner_id"/>
                                         <br/>
                                         <field name="vehicle_id"/>
                                         <br/>
                                     </strong>
+
+                                    <field name="date_deadline"/>
+
                                     <div class="o_kanban_tags_section">
                                         <field name="tag_ids" widget="many2many_tags"
                                                options="{'color_field': 'color'}"/>
                                     </div>
-                                    <span t-attf-class="#{red || ''}">
-                                        <i>
-                                            <field name="date_deadline"/>
-                                        </i>
-                                    </span>
+
 
                                     <small class="o_kanban_record_subtitle text-muted">
                                         <field name="project_id"
